# racecar

./: .dockerignore  .gitignore  .gitmodules  CODEOWNERS  Dockerfile  Jenkinsfile  README.md  dockerenv.sh  formatit.sh  imageprune.py  lintit.sh  new_robot.sh  requirements_pip.txt  robot.env  robot.sh  rostarget.sh
computer-configuration/: README.md  authorized_keys  main-compute.yml
src/magellan_core/: CMakeLists.txt  package.xml
src/magellan_core/launch/: blob_maker.launch  continuous_path.launch  fake_obstacles.launch  fake_sensors.launch  gps_localization.launch  lidar.launch  line_detector.launch  local.launch  local_with_camera.launch  localization.launch  main.launch  main_sim.launch  navigation.launch  new_navigation.launch  obstacle_avoidance.launch  occupancy_grid.launch  passive.launch  pixel_to_point.launch  planner.launch  robot.launch  sim.launch  static_tf.launch
src/magellan_core/msg/: EncoderDeltaStamped.msg  Int32XYArr.msg
src/magellan_core/params/: fake_path.yaml  gps_ekf.yaml  odom_ekf.yaml
src/magellan_core/scripts/: continuous_path.py  fake_path.py  fake_sensors.py
src/magellan_firmware/: CMakeLists.txt  compile.sh  download.sh  package.xml
src/magellan_firmware/firmware/magellan_controller/: Drivetrain.cpp  Drivetrain.h  EncoderPublisher.cpp  EncoderPublisher.h  HeartbeatLED.cpp  IMU.cpp  PWM.cpp  PWM.h  Rate.cpp  Robot.cpp  Robot.h  SoftWatchdog.cpp  TransmitterInterface.cpp  TransmitterInterface.h  config.h  magellan_controller.ino
src/magellan_gameplay/: CMakeLists.txt  package.xml  setup.py
src/magellan_gameplay/launch/: main.launch
src/magellan_gameplay/src/magellan_gameplay/: HighLevelFSM.py  game.py  gameplay_exception.py
src/magellan_motion/: CMakeLists.txt  package.xml
src/magellan_motion/action/: PlannerRequest.action
src/magellan_motion/include/: planner.h
src/magellan_motion/params/: motion_planner.yaml
src/magellan_motion/scripts/: fake_obstacles.py  stupid_path.py
src/magellan_motion/src/new_path_follower/: force_cmd.cpp
src/magellan_motion/src/path_follower/: path_follower.cpp  path_follower.h  path_follower_node.cpp  path_markers.cpp  path_markers.h  velocity_limiter.cpp  velocity_limiter.h
src/magellan_motion/src/path_planner/: planner.cpp  planner_node.cpp
src/magellan_motion/src/waypoint_driver/: waypoint_driver.cpp  waypoint_driver.h  waypoint_driver_node.cpp
src/magellan_motion/test/: test_path_follower.test
src/magellan_sim/: CMakeLists.txt  package.xml
src/magellan_sim/launch/: sim.launch
src/magellan_sim/src/: MagellanSim.cpp  MagellanSim.h  magellan_sim.cpp
src/magellan_vision/: CMakeLists.txt  init.sh  package.xml
src/magellan_vision/include/: blob_maker.h  grid_expander.h
src/magellan_vision/scripts/: blobDetection_ROS.py  cone_detector.py  cone_detector_image.py  detect_cones.py  detect_targets.py  fake_img_publisher.py  line_detector.py  line_detector_ROS.py  occupancyGrid.py  occupancy_grid.py  pixel_to_point.py  yolo.py
src/magellan_vision/scripts/magellan-yolo/: detect_cones.py
src/magellan_vision/scripts/magellan-yolo/yolo3/: model.py
src/magellan_vision/scripts/utils/: cv_utils.py
src/magellan_vision/scripts/yolo3/: utils.py
src/magellan_vision/src/blob_maker/: blob_maker.cc  blob_maker_node.cc
src/magellan_vision/src/fastblobs/: fast_blob_maker.cpp  grid_expander.cpp
